[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
itertools = "0.12.0"
serde_scan = "0.4.1"
ureq = "2.9.1"
indoc = "2.0.4"
aoc_helper = { path = "../aoc_helper" }
rayon = "1.8.0"
sscanf = "0.4.1"
